learn english, naprawienie usterek